--- a/WEB222/Assignment 3/Source Code/stylesheet.css
+++ b/WEB222/Assignment 3/Source Code/stylesheet.css
@@ -1,3 +1,11 @@
+/* // ***************************************************************************** 
+// * WEB222 – Assignment 3 
+// * I declare that this assignment is my own work in accordance with Seneca Academic Policy. 
+// * No part of this assignment has been copied manually or electronically from any other source 
+// * (including web sites) or distributed to other students. 
+// * 
+// * Name: Joseph Mwamba-Mukuna Student ID: 163997216 Date: 26/03/2024 
+// * ****************************************************************************** */
 body {
     background-color: yellow;
     margin-left: 300px;
