--- a/WEB222/Project/results.css
+++ b/WEB222/Project/results.css
@@ -356,7 +356,7 @@ a:active {
   flex-shrink: 0;
   position: absolute;
   margin-left: 5px;
-  width: 100%; /* Updated to fill entire width */
+  width: 100%; 
   height: 36px;
   top: 0;
   left: 0;
@@ -488,16 +488,21 @@ a:active {
   border-radius: 8px;
 }
 .rectangle-a {
-  position: relative;
-  width: 238.385px;
-  height: 192.961px;
-  margin: 0 0 0 0.38px;
-  background: rgba(196, 196, 196, 0.2)
-    url('') no-repeat
-    center;
-  background-size: cover;
-  z-index: 30;
+  display: block;
   border-radius: 8px;
+  position: relative;
+  width: 240px;
+  height: 190px;
+  margin: 0 0 0 0.38px;
+  background-size: cover;
+  border-radius: 8px;
+}
+.rectangle-a img{
+  display: block;
+  width: 100%;
+  height: 100%; 
+  border-radius: 10px;
+  object-fit: cover;
 }
 .news-title {
   display: flex;
